--- a/index.html
+++ b/index.html
@@ -5,12 +5,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Sign-Up Form</title>
 </head>
 
 <body>
+    <div id="content">
+        <div id="left">
+            <div id="logo">
+                <img id="logo-image" src="images/logo.png" alt="lineart of stylised odin head">
+                <div id="logo-text">ODIN</div>
+            </div>
+            <img src="images/background.avif" alt="background made of leaves" id="background-image">
+        </div>
+        <div id="right">
+            <div class="top">
+                <strong>
+                    <p>
+                        This is not a real online service! You know you need something like this in your life to
+                        help you realize your deepest dreams.<br>Sign up <em>now</em> to get started.
+                    </p>
+                    <p>
+                        You <em>know</em> you want to.
+                    </p>
+                </strong>
+            </div>
+            <div class="middle">
+                <legend>
+                    <strong>Let's do this!</strong>
+                </legend>
+                <form id="signup" action="#" method="post">
+                    <div>
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" name="first-name" id="first-name">
+                    </div>
 
+                    <div>
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" name="last-name" id="last-name">
+                    </div>
+
+                    <div>
+                        <label for="email">EMAIL</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+
+                    <div>
+                        <label for="number">PHONE NUMBER</label>
+                        <input type="tel" name="number" id="number">
+                    </div>
+
+                    <div>
+                        <label for="password">PASSWORD</label>
+                        <input class="error" type="password" name="password" id="password">
+                        <div class="errormsg">* Passwords do not match</div>
+                    </div>
+
+                    <div>
+                        <label for="confirm">CONFIRM PASSWORD</label>
+                        <input class="error" type="password" name="confirm" id="confirm">
+                    </div>
+                </form>
+            </div>
+            <div class="bottom">
+                <button form="signup" type="submit">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
